// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<HelpTooltip
  onShow={[Function]}
  overlay={
    <div
      className="abs-width-300"
    >
      <i
        className="spinner"
      />
    </div>
  }
/>
`;

exports[`should render 2`] = `
<HelpTooltip
  onShow={[Function]}
  overlay={
    <DocMarkdownBlock
      className="cut-margins abs-width-300"
      content="this is *bold* text"
    />
  }
/>
`;
